# email_agent

./: .coverage  .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  TESTING.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml  test.yml
src/: agent.py  api.py  db.py  fetch_mails.py  test.py
static/: index.html
tests/: test_agent.py  test_api.py  test_db.py
